media query changes

--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,16 @@
 <body class="h-screen bg flex justify-center items-center" >
 
     <div class="h-screen flex justify-center items-center">
-        <div class="bg-[#EFEBFD] absolute h-[500px] w-80 -z-10 rounded-xl"></div>
+        <div class="bg-[#EFEBFD] absolute h-[600px] md:h-[500px] w-80 -z-10 rounded-xl"></div>
 
-        <section class="w-[530px] h-96 bg-white shadow-xl ml-5 my-auto rounded-xl flex">
+        <section class="w-[530px] md:h-[400px] h-[500px] bg-white shadow-xl ml-5 my-auto rounded-xl flex">
             <div class=" w-[80%] flex flex-col justify-center items-center mx-auto">
                 <div class="input">
                     <input type="text" placeholder="Search for a part time job" class="border border-gray rounded-md px-8 py-2">
                     <button class="text-white bg-[#281A51] px-6 py-2 rounded-md"> <i class="fa-solid fa-map"></i> Use map </button>
                 </div>
     
-                <div class="mt-12 gap-2 grid grid-cols-2 md:grid-cols-4 place-items-center">
+                <div class="mt-12 gap-2 grid grid-cols-3 md:grid-cols-4 place-items-center">
                     <div class="bg-[#FFECEC] w-24 h-24 p-2 rounded-md flex flex-col justify-center items-center">
                         <i class="fa-solid fa-couch "></i>
                         <p> Furniture </p>
